# geotoolkit

./: .gitignore  CONTRIBUTING.md  README.md  environment.yml  geotoolkit.pyt  mkdocs.yml  pyproject.toml  regions.json  requirements.txt  setup.py
docs/: contributing.md  index.md
docs/api/: core.md  engines.md  interfaces.md  utils.md
docs/getting-started/: installation.md  quick-start.md
docs/user-guide/: configuration.md  preprocessor.md
examples/: example.py  route_66.dbf  route_66.shp  route_66.shp.xml  route_66.shx  route_66_reprojected.dbf  route_66_reprojected.shp  route_66_reprojected.shx  route_66_reprojected_2d.dbf  route_66_reprojected_2d.shp  route_66_reprojected_2d.shx
geotoolkit/: __init__.py  geotoolkit.pyt  regions.json
geotoolkit/core/: base.py  constants.py  exceptions.py
geotoolkit/engines/arcpy_engine/: preprocessor.py
geotoolkit/engines/gdal_engine/: preprocessor.py
geotoolkit/interfaces/: preprocessor.py
geotoolkit/toolboxes/: __init__.py  sinuosity_toolbox.py
geotoolkit/tools/: calculate_sinuosity.py  dem_downloader.py  spatial.py
geotoolkit/utils/: config.py  logger.py  read_epsg.py
